--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -1,6 +1,5 @@
 {
   "name": "phonebook-backend",
-  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.10"
   }
 }
