--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "mongoose": "^8.16.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10"
   }
